# backend.vkusonline

./: .gitattributes  .gitignore  5POST_INTEGRATION_GUIDE.md  MAGNIT_INTEGRATION_SPEC.md  YOOKASSA_INTEGRATION.md  description_vkus-online.md
backend/: .env.example  .gitignore  .vkus_cli_state.json  1_pretty.json  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  log_config.yaml  pyproject.toml
backend/apps/api/: deps.py  main.py
backend/apps/api/middleware/: error_handler.py  request_id.py
backend/apps/api/routers/: admin.py  auth.py  bootstrap.py  cart.py  catalog.py  (+12 more)
backend/apps/worker/: main.py  scheduler.py
backend/docs/: API_5post.docx  API_5post_extracted.txt  api-private.md  api-public.md  architecture.md  deployment.md  email-templates.md  fivepost-order-statuses.md  frontend-integration.md  logging.md  magnit-order-statuses.md  price-exchange.md  qa.md  services.md  shipment-status-sync.md
backend/migrations/: env.py
backend/migrations/versions/: 72de5976e4a1_add_payment_method_to_orders.py  a3f8b2c1d4e5_product_fields_and_nullable_family.py  b5c7d9e1f3a2_flow3_order_type_and_statuses.py  c6d8e0f2a4b6_add_recipient_fields.py  d1e2f3a4b5c6_add_subscribers.py  e2f3a4b5c6d7_add_price_exchange_tables.py  fa59a1a3479d_initial_schema.py
backend/scripts/: .vkus_cli_state.json  VKUS_CLI_DOCS.md  deploy.sh  import_frontend_catalog.py  install_rocky.sh  install_ubuntu.sh  resync_magnit.py  run_qa.sh  seed_catalog.py  test_e2e_shipments.py  vkus_cli.py
backend/templates/email/: _layout.html
backend/tests/: conftest.py
backend/tests/contract/: test_fivepost_mock.py  test_yookassa_mock.py
backend/tests/integration/: test_auth_flow.py  test_cart.py  test_checkout.py  test_guest_session.py  test_payments.py
backend/tests/unit/: test_delivery_utils.py  test_discounts.py  test_idempotency.py  test_receipt_builder.py  test_security.py  test_utils.py
emulator/: .env.example  README.md  cli.py  config.py  database.py  lifecycle.py  main.py  pyproject.toml  test_qa.py
emulator/routers/: admin.py  fivepost.py  magnit.py
(+77 files in other folders)
