[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "delivery-emulator"
version = "1.0.0"
description = "5Post & Magnit delivery API emulator for order lifecycle testing"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "pydantic-settings>=2.6",
]
